--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "PORT=8000 next dev --turbopack",
-    "build": "next build",
+    "build": "NEXT_DISABLE_ESLINT=true next build",
     "start": "next start",
     "lint": "next lint"
   },
